Prevent relayout when there is scrollbar

--- a/SqlLabApp/static/css/nav.css
+++ b/SqlLabApp/static/css/nav.css
@@ -27,6 +27,10 @@
     }
 }
 
+html {
+    overflow-y: scroll;
+}
+
 h1 {
     padding-top: 10px;
     color: white;
